Add reduction kernel with 3 optimization levels (atomic, shared, warp shuffle)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ add_library(kernels STATIC
     gemm.cu
     softmax.cu
     conv2d.cu
+    reduction.cu
 )
 
 target_link_libraries(kernels CUDA::cudart)
