--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,3 +10,6 @@ target_link_libraries(test_softmax kernels CUDA::cudart)
 
 add_executable(test_conv2d test_conv2d.cu)
 target_link_libraries(test_conv2d kernels CUDA::cudart)
+
+add_executable(test_reduction test_reduction.cu)
+target_link_libraries(test_reduction kernels CUDA::cudart)
