Add Tensor Core WMMA implementation with 10 FP32 speedup for TensorRT interviews

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(kernels STATIC
     vec_add.cu
     gemm.cu
     gemm_fp16.cu
+    gemm_wmma.cu
     softmax.cu
     conv2d.cu
     reduction.cu
